# skyrim-platform

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: deploy.yml
docs/: Docs_RU.md
src/platform_se/: CMakeLists.txt
src/platform_se/codegen/: FunctionsDump.txt  index.js
src/platform_se/psc/: TESModPlatform.psc
src/platform_se/skyrim_platform/: BrowserApi.cpp  CallNative.cpp  CallNative.h  CallNativeApi.cpp  CallNativeApi.h  ConsoleApi.cpp  ConsoleApi.h  DumpFunctions.cpp  EventSinks.cpp  EventSinks.h  EventsApi.cpp  EventsApi.h  FlowManager.cpp  FlowManager.h  FridaHooks.cpp  GetNativeFunctionAddr.cpp  InventoryApi.cpp  JsEngine.cpp  JsEngine.h  LoadGame.cpp  LoadGame.h  MpClientPluginApi.cpp  NativeValueCasts.cpp  PapyrusTESModPlatform.cpp  PapyrusTESModPlatform.h  TPInputService.cpp  TPOverlayService.cpp  TPOverlayService.h  TPRenderSystemD3D11.cpp  VmProvider.cpp  main.cpp
src/platform_se/skyrim_platform/savefile/: ChangeFormACHR.cpp  ChangeFormNPC.cpp  ChangeFormNPC.h  Main.cpp  Reader.cpp  Reader.h  SaveFileStructure.cpp  SeekerOfDifferences.cpp  SeekerOfDifferences.h  Writer.cpp  Writer.h
src/platform_se/skyrim_platform/skee/: SKCDXBSShaderResource.cpp  SKCDXBSShaderResource.h  SKCDXD3DDevice.h  SKCDXNifPixelShaderCache.cpp  SKCDXNifPixelShaderCache.h  SKCDXNifTextureRenderer.cpp  SKCDXNifTextureRenderer.h  SKCDXPixelShaderCache.cpp  SKCDXPixelShaderCache.h  SKCDXRenderState.cpp  SKCDXRenderState.h  SKCDXShaderCompile.cpp  SKCDXShaderCompile.h  SKCDXShaderFactory.cpp  SKCDXShaderFactory.h  SKCDXTextureRenderer.cpp  SKCDXTextureRenderer.h  SKCDXTypes.h  SKFileUtils.cpp  SKFileUtils.h  SKIHashType.h  SKIPluginInterface.h  SKItemDataInterface.cpp  SKItemDataInterface.h  SKMain.cpp  SKMain.h  SKNifUtils.cpp  SKNifUtils.h  SKOverrideInterface.cpp  SKOverrideInterface.h  SKOverrideVariant.cpp  SKOverrideVariant.h  SKShaderUtilities.cpp  SKShaderUtilities.h  SKStringTable.cpp  SKStringTable.h  SKTintMaskInterface.cpp  SKTintMaskInterface.h  SKUtilities.cpp  SKUtilities.h  (+2 more)
src/platform_se/vs_startup_project/: main.cpp
tools/codegen/: index.js
tools/dev_service/: index.js  package-lock.json
tools/plugin-example/src/: tests.ts
